# desertemail

./: .gitignore  Cargo.toml  DEPLOY.md  LICENSE  README.md  build-binaries.sh  config.example.toml  desertemail  install.sh  render.yaml  site-build.sh
.githooks/: pre-push
bin-dist/: SOURCE_HASH  desertemail-aarch64-apple-darwin  desertemail-aarch64-unknown-linux-musl  desertemail-arm-unknown-linux-musleabihf  desertemail-armv7-unknown-linux-musleabihf  desertemail-x86_64-apple-darwin  desertemail-x86_64-unknown-linux-musl
deploy/: backup.sh  desertemail.service  fail2ban-desertemail.conf  fail2ban-jail-desertemail.local  release.yml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: auth_decode.rs  config_parse.rs  dns_response.rs  http_request.rs  imap_line.rs  invites_json.rs  mime_walk.rs  multipart_form.rs  smtp_line.rs  tar_parse.rs
installers/: build-from-source.sh  install-windows.ps1  template.sh  uninstall.sh
scripts/: source-hash.sh
site/: desertbox.html  docs.html  index.html  install-windows.ps1
src/: acme.rs  auth.rs  config.rs  crypto.rs  dkim.rs  dmarc.rs  dns.rs  doctor.rs  imap.rs  invites.rs  lib.rs  limits.rs  main.rs  metrics.rs  passwd.rs  portmap.rs  queue.rs  ratelimit.rs  shutdown.rs  smtp.rs  spamscore.rs  spf.rs  storage.rs  tarball.rs  tls.rs  useredit.rs  util.rs  web.rs
tests/: INSTALLER-TEST-REPORT.md  dkim_crossverify.rs  loadtest.sh  smoke.sh  test-installers.sh
